@@ -75,7 +75,9 @@
         Set Image Criteria command</A> in the Processing menu.</P>
     <P><b>Correct Drift</b></P>
     <P>This checkbox is present for a OneView camera and turns on the real-time drift 
-      correction by that camera.</P>
+      correction by that camera.&nbsp; Note that if this option is on and the image 
+      does not have enough features for alignment, the intensity of the image may be 
+      much less than expected.</P>
     <P><B>Binning</B></P>
     <P>These radio buttons present the options for binning an image directly as it is 
       read out of the CCD camera.</P>
