@@ -1623,7 +1623,9 @@
       scripting interface, the same behavior can be imposed for Falcon 2 and Ceta 1 
       camera by adding the camera property &#39;AutoGainFactors 1&#39;.</P>
     <P>Gain factors may also be needed for a Gatan OneView camera, so the relative 
-      gains should be measured as described above. If a factor is not 1, it will be 
+      gains should be measured as described above.&nbsp; Be sure to turn off &#39;Correct 
+      drift&#39; in the Camera Setup dialog before taking images without alignable 
+      features, since intensities will be wrong if some frames cannot be aligned.&nbsp; If a factor is not 1, it will be 
       exactly the inverse of a power of 2.&nbsp; On one camera these factors were &#39;1 0.25 0.125 0.0625&#39;; 
       on another, no factors were needed.</P>
     <P>&nbsp;</P>
